@@ -13,6 +13,7 @@
     --text-color: #0D0C0C;
     --title-size: 16px;
     --text-size: 14px;
+    --cv-color: #748DB2;
 }
 
 * {
@@ -754,6 +755,10 @@ header {
 
 .icon-php {
     background: url(../assets/img/php-icon.svg);
+}
+
+.icon-java {
+    background: url(../assets/img/java.svg);
 }
 
 .icon-laravel {
@@ -1650,6 +1655,14 @@ input:focus {
     gap: 20px;
 }
 
+.cv-flex {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+}
+
 .cv-title {
     display: flex;
     flex-direction: column;
@@ -1661,18 +1674,17 @@ input:focus {
 }
 
 .cv-photo {
+    aspect-ratio: 1/1;
     display: block;
-    background: url(../assets/img/photo.jpg);
+    background: url(../assets/img/photo.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 80px;
-    height: 80px;
+    height: 150px;
     border-radius: 50%;
 }
 
 .cv-profile {
     margin-bottom: 20px;
-    width: 75%;
 }
 
 
@@ -1691,7 +1703,7 @@ input:focus {
 
 
 .color-blue-accent {
-    color: var(--bcg-color-primary-accent);
+    color: var(--cv-color);
     font-weight: bold;
 }
 
@@ -1700,12 +1712,25 @@ input:focus {
     font-size: calc(var(--text-size)*1.3);
 }
 
+.cv-section-subtitle {
+    font-weight: bold;
+    font-style: normal;
+}
+
 .cv-exp-details {
     margin-top: 35px;
 }
 
 .cv-detail-block {
     margin-bottom: 30px;
+}
+
+.margin-t-30 {
+    margin-top: 30px;
+}
+
+.margin-b-15 {
+    margin-bottom: 15px;
 }
 
 .margin-b-30 {
@@ -1721,8 +1746,11 @@ input:focus {
     font-style: italic;
 }
 
+.cv-inner-container p .exp-details {
+    font-size: calc(var(--text-size)*1.1);
+}
+
 .cv-exp-title {
-    color: var(--bcg-color-primary-accent);
     font-weight: bold;
 }
 
@@ -1734,6 +1762,20 @@ input:focus {
     display: block;
     height: 20px;
     background-color: var(--bcg-color-primary);
+}
+
+.cv-icon-list {
+    display: flex;
+    gap: 10px;
+}
+
+.cv-icon {
+    display: block;
+    width: 30px;
+    height: 30px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 #cv-1,
@@ -1756,7 +1798,7 @@ input:focus {
 
 .grid-s {
     display: grid;
-    grid-template-columns: 1fr 150px;
+    grid-template-columns: 1fr 50px;
     gap: 20px
 }
 
@@ -1804,9 +1846,27 @@ input:focus {
     justify-content: center;
 }
 
+.cv-right {
+    margin-top: 60px;
+}
+
 @media screen and (min-width: 768px) {
-    .cv-qualities {
-        margin-bottom: 140px
+    .cv-flex {
+        flex-direction: unset;
+    }
+
+    .cv-right {
+        margin-top: unset;
+    }
+
+    .cv-exp {
+        margin-bottom: 105px;
+    }
+
+    .cv-qualities,
+    .cv-skills-web,
+    .cv-skills-ia {
+        margin-bottom: 70px
     }
 
     .cv-inner-container span,
@@ -1815,10 +1875,16 @@ input:focus {
     }
 }
 
+@media screen and (min-width: 794px) {
+    .cv-exp {
+        margin-bottom: 125px;
+    }
+}
+
 @media screen and (min-width: 1440px) {
     .flex-title-c {
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
     }
 
     #prev {
